PM/T8/1.1/README.md
#Performance Management
负责人 丁宇笙 QQ916189241  手机18817876233 欢迎骚扰
##请使用lastest_version文件夹下的jar文件
##项目说明：

1. 这是一个单例,不提供单独的构造函数,在一个项目中无法声明多个对象,无需声明额外对象
2. 发送PM消息请调用  sendPMMessage(String name,int value) 方法,不支持其他格式其他类型的PM消息
    * value>0且value<MAX_int
3. 发送消息的时候会在项目文件夹下新建一个LOG的文件夹
4. 每接受一条消息,都会将该分钟内收到的**所有消息**输出到 "项目文件夹\LOG" 下,并以yyyy-MM-dd-HH-mm.log命名该文件
    * 如2015年4月28日19时33分发送的消息,将会保存在  "项目路径\LOG\2015-04-24-19-33.log"文件中
    * 输出格式  每行一个不同类型的消息    name:value
    * 如果该文件已存在，将会覆盖该文件中的内容
5. 如果该分钟内没有收到任何消息,将不会建立该分钟所对应的log文件
6. 支持多线程
7. 该类中还提供其他几个方法,他们是为了提高测试人员进行测试使用的。不建议使用该模块的时候进行调用。
8. 该类中的其他方法将在java doc中进行描述,详情请查看java doc开发文档

##使用说明：

1. 下载jar包
2. 在项目中添加jar包 ->Add External JARs
3. 开始项目

##代码介绍

使用语句 ：PM.sendPMMessage(String name,int value);即可发送相关消息


##使用示例：

``` java

import com.team8.PerformanceManagement.PM;

public class Main {

	/**
	 * @param args
	 */
	public static void main(String[] args) {
		// TODO Auto-generated method stub
		PM.sendPMMessage("First Message", 10);
		PM.sendPMMessage("First Message", 3);
		PM.sendPMMessage("Second Message", 5);
		PM.sendPMMessage("Third Message", 8);
		PM.sendPMMessage("Second Message", 5);
		PM.sendPMMessage("First Message", 5);
		PM.sendPMMessage("Second Message", 5);
		
	}

}

```

输出结果：

```

First Message:18
Third Message:8
Second Message:15

```



##Release Notes

###v1.1
貌似需要更改文件路径，所以添加了两个功能
1. 功能1 PM.setPathName("newFilePath"); 设置新的文件路径
	* 文件路径必须是已经存在的文件 可以是绝对路径，也可以是相对路径
	* 允许最后一级文件夹不存在，程序只会自动创建最后一级的文件
	* 文件路径不能为空，否则设置无效
	* 默认路径是    "项目路径\LOG\"
2. 功能2 PM.getPathName()
	* 获得目前文件路径
	* 实际上是调用setPathName时输入的数据
	
使用示例：

``` java

import com.team8.PerformanceManagement.PM;

public class Main {

	public static void main(String[] args) {
		// TODO Auto-generated method stub

		PM.setPathName("newFile");  //相对路径
		PM.sendPMMessage("message", 11);   
		PM.setPathName("F:\\github\\eclipse\\fenyinLearning\\android-swipelistview-master");   //绝对路径
		PM.sendPMMessage("message", 11);
		System.out.println(PM.getPathName());
		
	}
}

```


Console输出结果：

F:\github\eclipse\fenyinLearning\android-swipelistview-master


